feat: add Base mainnet event listener prototype to src/listener.ts

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@
 # Base contract used for "predict(string)" call.
 # Replace this with your deployed contract address if you have one.
 CONTRACT_ADDRESS=0x0a827a81C2Dd01acc9fE1E3a8F7c7CB753F7405F
+# Base mainnet RPC (public endpoint or your own)
+BASE_RPC_URL=https://mainnet.base.org
