--- a/.github/workflows/listener-cron.yml
+++ b/.github/workflows/listener-cron.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           BASE_RPC_URL: "https://mainnet.base.org"
           CONTRACT_ADDRESS: "0x0a827a81C2Dd01acc9fE1E3a8F7c7CB753F7405F"
-        run: npx ts-node src/listener.ts
+        run: npx ts-node --compiler-options '{"module":"CommonJS"}' src/listener.ts
 
       - name: Commit and push logs
         run: |
