--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Experimental Base + Farcaster lab for event logging and analysis.",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "build": "echo 'Nothing to build'",
     "dev": "node src/listener.ts",
@@ -11,7 +12,6 @@
   "dependencies": {
     "ethers": "^6.13.0"
   },
-  "type": "module",
   "engines": {
     "node": ">=18"
   }
