--- a/.github/workflows/listener-cron.yml
+++ b/.github/workflows/listener-cron.yml
@@ -2,7 +2,7 @@ name: Run Base Listener
 
 on:
   schedule:
-    - cron: "*/1115 * * * *"
+    - cron: "0 0 * * *" 
   workflow_dispatch:
   
 permissions:
