docs: extend env example with SAVE_INTERVAL and comments

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,23 @@
-# Example environment variables for Base Caster Lab
+# ----------------------------------------------------------
+# 🧠 Base Caster Lab — Environment Variables Example
+# Copy to .env.local before running locally or in GitHub Actions
+# ----------------------------------------------------------
 
-# Base contract used for "predict(string)" call.
-# Replace this with your deployed contract address if you have one.
-CONTRACT_ADDRESS=0x0a827a81C2Dd01acc9fE1E3a8F7c7CB753F7405F
-# Base mainnet RPC (public endpoint or your own)
+# 🔗 Base RPC Endpoint
+# Can be any public or private Base Mainnet RPC provider.
+# Default: https://mainnet.base.org
 BASE_RPC_URL=https://mainnet.base.org
+
+# 🏛 Contract Address
+# Contract to listen for "Prediction(address,string)" events.
+# You can replace this with your own deployed contract.
+CONTRACT_ADDRESS=0x0a827a81C2Dd01acc9fE1E3a8F7c7CB753F7405F
+
+# ⏱️ Polling interval (seconds)
+# How often the listener checks for new blocks/events.
+# Default: 30 (recommended between 15–60)
+SAVE_INTERVAL=30
+
+# 🗂️ Optional: directory to store JSON event logs
+# Default: ./logs
+LOGS_DIR=logs
